--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
-asgiref==3.8.1
-Django>=4.0,<5.0
+asgiref==3.4.1
+autopep8==1.5.7
+certifi==2024.8.30
+charset-normalizer==3.3.2
+distlib==0.3.8
+dj-database-url==0.5.0
+Django==3.2.6
+django-distill==3.2.7
+django-phonenumber-field==8.0.0
+filelock==3.15.4
+gunicorn==20.1.0
+idna==3.10
+phonenumbers==8.13.44
 pillow==10.4.0
-sqlparse==0.5.1
+platformdirs==4.2.2
+pycodestyle==2.7.0
+python-decouple==3.4
+pytz==2021.1
+requests==2.32.3
+setuptools==74.1.1
+sqlparse==0.4.2
+toml==0.10.2
 tzdata==2024.1
+Unipath==1.1
+urllib3==2.2.3
+virtualenv==20.26.3
+whitenoise==5.3.0
